# ProjectLeiden

./: CMakeLists.txt  README.md  main.c
audio/: CMakeLists.txt  audio.c  audio.h  music.c  sound.c
audio-miniaudio/: CMakeLists.txt  audio.h  music.c  sound.c
data/: CMakeLists.txt  dynarray.c  dynarray.h  hashtable.c  hashtable.h
demos/: CMakeLists.txt  clearscreen.c  demo1.c  demo2.c  demos.h  iqmobjteste.c  simplelightcube.c  simplemodel.c
filesystem/: CMakeLists.txt  fileio.c  fileio.h  ini.c  ini.h
graphics/: CMakeLists.txt  camera.c  effect.c  graphics.c  graphics.h  implementations.c  lights.c  materials.c  models.c  renderer.c  scene.c  shaders.c  skybox.c  stb_image.h  textures.c
graphics/shaders/: materialtest.frag  materialtest.vert
graphics/shaders/celshading/: generic.vert  norm.frag  norm.vert  outline.frag  toon.frag  toon.vert
input/: CMakeLists.txt  input.c  input.h
leiden/: CMakeLists.txt  leiden.c  leiden.h
linmath/: CMakeLists.txt  linmath.c  linmath.h
screens/: CMakeLists.txt  celshading.c  controls.c  demopostproc.c  screens.h  simple.c  splash.c
shaders/: README  demoset2.frag  demoset2.vert
src/: main.c
src/assets/: assets.h  camera.c  iqm.h  model.c  texture.c
src/data/: hashtable.c  list.c  list.h
src/entity/: entity.h
src/filesystem/: fileio.c  fileio.h  ini.c  ini.h
src/linmath/: linmath.c  linmath.h
src/physics/: PLACEHOLDER  collision.c  collision.h  octree.c  octree.h  physics.c  physics.h
src/scene/: scene.h
src/screens/: controls.c  deprecatedcelshading.c  helpers.c  screens.h  splash.c  test1.c  test2.c  test3.c
src/shaders/: shader.c  shader.h
