add_library(leiden STATIC leiden.c)
target_include_directories(leiden PUBLIC .)
target_link_libraries(leiden PUBLIC SDL3::SDL3)
target_link_libraries(leiden PRIVATE linmath)
target_link_libraries(leiden PRIVATE filesystem)
target_link_libraries(leiden PRIVATE data)
target_link_libraries(leiden PRIVATE input)
target_link_libraries(leiden PRIVATE graphics)
target_link_libraries(leiden PRIVATE audio)
